support 429 and treat 400 as a 429

--- a/env.example
+++ b/env.example
@@ -1,2 +1,8 @@
 DAILY_SOURCE_API_KEY=
 DAILY_TARGET_API_KEY=
+
+# Optional: Rate limit handling configuration
+# MAX_RETRIES=3              # Number of retry attempts for failed requests
+# INITIAL_DELAY=1            # Initial delay in seconds before first retry
+# BACKOFF_FACTOR=2           # Multiplier for exponential backoff
+# TRANSFER_DELAY=2           # Delay in seconds between each phone number transfer
